# Enigma_Bitcoin_proto

bip32_proto/: Cargo.toml
bip32_proto/src/: main.rs
deserialize_utxo/: Cargo.toml
deserialize_utxo/src/: main.rs
hdwallet_path/: Cargo.toml
hdwallet_path/src/: main.rs
make_address/: Cargo.toml
make_address/src/: main.rs
p2pkh_sending/: Cargo.toml
p2pkh_sending/src/: main.rs
sign_by_dif_address_/: Cargo.toml
sign_by_dif_address_/src/: main.rs
sign_multiple_utxos/: Cargo.toml
sign_multiple_utxos/src/: main.rs
sign_utxo/: Cargo.toml
sign_utxo/src/: main.rs  utox.txt
verify_hash_tree/: Cargo.toml
