[package]
name = "sign_multiple_utxos"
version = "0.1.0"
authors = ["NamahageTahara <0802creo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.21.0"
hex = "0.4.0"
secp256k1 = "0.15.0"
btc-transaction-utils = "0.7.0"